--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.github.GrenderG:Toasty:1.4.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 }
