Add header to getUserById request + code review

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Controllers.SplashScreen">
+        <activity android:name="org.kicksound.Controllers.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,16 +22,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Controllers.Tabs.TabActivity"
+            android:name="org.kicksound.Controllers.Tabs.TabActivity"
             android:label="@string/title_activity_tab"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".Controllers.RegistrationActivity"
+            android:name="org.kicksound.Controllers.RegistrationActivity"
             android:label="@string/title_activity_registration"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="InnerclassSeparator" />
         <activity
-            android:name=".Controllers.MainActivity"
+            android:name="org.kicksound.Controllers.MainActivity"
             tools:ignore="InnerclassSeparator">
         </activity>
     </application>
