--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Controllers.ResetPasswordActivity"></activity>
+        <activity android:name=".Controllers.CreateEventActivity"></activity>
+        <activity android:name=".Controllers.ResetPasswordActivity" />
         <activity android:name=".Controllers.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,8 +33,8 @@
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="InnerclassSeparator" />
         <activity
-            android:name=".Controllers.MainActivity"
-            tools:ignore="InnerclassSeparator"></activity>
+            android:name=".Controllers.LoginActivity"
+            tools:ignore="InnerclassSeparator" />
     </application>
 
 </manifest>
