--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Controllers.CreateEventActivity"></activity>
+        <activity android:name=".Controllers.Event.CreateEventActivity"></activity>
         <activity android:name=".Controllers.ResetPasswordActivity" />
-        <activity android:name=".Controllers.SplashScreen">
+        <activity android:name=".Controllers.Connection.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,12 +28,12 @@
             android:label="@string/title_activity_tab"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Controllers.RegistrationActivity"
+            android:name=".Controllers.Connection.RegistrationActivity"
             android:label="@string/title_activity_registration"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="InnerclassSeparator" />
         <activity
-            android:name=".Controllers.LoginActivity"
+            android:name=".Controllers.Connection.LoginActivity"
             tools:ignore="InnerclassSeparator" />
     </application>
 
