--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
