Code review + create searched user view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Controllers.User.UserPicture"></activity>
+        <activity android:name=".Controllers.Search.UserSearched"></activity>
+        <activity android:name=".Controllers.User.UserPicture" />
         <activity android:name=".Controllers.Event.CreateEventActivity" />
         <activity android:name=".Controllers.User.ResetPasswordActivity" />
         <activity android:name=".Controllers.Connection.SplashScreen">
