--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha05'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.GrenderG:Toasty:1.4.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -39,5 +39,6 @@ dependencies {
     implementation 'com.android.support:design:28.1.0'
     implementation 'com.android.support:appcompat-v7:28.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.clans:fab:1.6.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
