--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/kicksound_logo"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Controllers.Event.EventView"></activity>
+        <activity android:name=".Controllers.Event.EventParticipants"></activity>
+        <activity android:name=".Controllers.Event.EventView" />
         <activity android:name=".Controllers.Event.MyEvents" />
         <activity android:name=".Controllers.Search.UserSearched" />
         <activity android:name=".Controllers.User.UserPicture" />
