--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,11 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
+        android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Controllers.Event.EventParticipants"></activity>
+        <activity android:name=".Controllers.Event.EventByFollowedArtiste"></activity>
+        <activity android:name=".Controllers.Event.EventParticipation" />
+        <activity android:name=".Controllers.Event.EventParticipants" />
         <activity android:name=".Controllers.Event.EventView" />
         <activity android:name=".Controllers.Event.MyEvents" />
         <activity android:name=".Controllers.Search.UserSearched" />
@@ -33,11 +35,11 @@
         <activity
             android:name=".Controllers.Tabs.TabActivity"
             android:label="@string/title_activity_tab"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".Controllers.Connection.RegistrationActivity"
             android:label="@string/title_activity_registration"
-            android:theme="@style/AppTheme.NoActionBar"
+            android:theme="@style/AppTheme"
             tools:ignore="InnerclassSeparator" />
         <activity
             android:name=".Controllers.Connection.LoginActivity"
