Display, read and add musics

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".playlist_item"></activity>
+        <activity android:name=".Controllers.Song.ArtistMusics"></activity>
+        <activity android:name=".Controllers.Song.AddMusic" />
+        <activity android:name=".Controllers.Song.Musics" />
+        <activity android:name=".playlist_item" />
         <activity android:name=".Controllers.Playlist.Playlists" />
         <activity android:name=".Controllers.Event.EventByFollowedArtiste" />
         <activity android:name=".Controllers.Event.EventParticipation" />
