--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.github.sadra:AwesomeSpinner:1.5.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
